Add comment in POM.xml

--- a/dropwizardrepo/dropwizard/pom.xml
+++ b/dropwizardrepo/dropwizard/pom.xml
@@ -30,6 +30,7 @@
 	</dependency>
 </dependencies>
 
+<!-- Add Repository for Oracle jar -->
 <repositories>
     <repository>
       <id>codelds</id>
