--- a/dropwizardrepo/dropwizard/pom.xml
+++ b/dropwizardrepo/dropwizard/pom.xml
@@ -12,6 +12,8 @@
 </properties>
   
   
+  
+  
   <dependencies>
     <dependency>
         <groupId>com.yammer.dropwizard</groupId>
@@ -23,27 +25,53 @@
         <artifactId>dropwizard-jdbi</artifactId>
         <version>0.6.2</version>
     </dependency>
-    <dependency>
+   <!--  <dependency>
 		<groupId>com.oracle</groupId>
 		<artifactId>ojdbc14</artifactId>
 		<version>10.2.0.3</version>
-	</dependency>
+	</dependency> -->
 	<dependency>
 		<groupId>com.yammer.dropwizard</groupId>
 		<artifactId>dropwizard-auth</artifactId>
 		<version>0.6.2</version>
 	</dependency>
-</dependencies>
+	<dependency>
+		<groupId>junit</groupId>
+		<artifactId>junit</artifactId>
+		<version>4.12</version>
+	</dependency>
+	<dependency>
+		<groupId>io.dropwizard</groupId>
+		<artifactId>dropwizard-testing</artifactId>
+		<version>0.8.0</version>
+		<scope>test</scope>
+	</dependency>
+ </dependencies>
+ 	
 
 <!-- Add Repository for Oracle jar -->
 <repositories>
-    <repository>
-      <id>codelds</id>
-      <url>https://code.lds.org/nexus/content/groups/main-repo</url>
-    </repository>
-</repositories>
+      <repository>
+          <id>sonatype-nexus-snapshots</id>
+          <name>Sonatype Nexus Snapshots</name>
+          <url>http://repo1.maven.org/maven2</url>
+      </repository>
+  </repositories>
 <build>
     <plugins>
+    	<plugin>
+			<artifactId>maven-surefire-plugin</artifactId>
+			<version>2.12.4</version>
+			<executions>
+				<execution>
+					<id>default-test</id>
+					<phase>test</phase>
+					<goals>
+						<goal>test</goal>
+					</goals>
+				</execution>
+			</executions>
+		</plugin>
         <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
@@ -67,5 +95,33 @@
 		</plugin>
     </plugins>
 </build>
+
+<reporting>
+  <plugins>
+	<!-- Normally, we take off the dependency report, saves time. -->
+	<plugin>
+		<groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-project-info-reports-plugin</artifactId>
+		<version>2.7</version>
+		<configuration>
+			<dependencyLocationsEnabled>false</dependencyLocationsEnabled>
+		</configuration>
+	</plugin>
+ 
+	
+	<plugin>
+		<groupId>org.codehaus.mojo</groupId>
+		<artifactId>cobertura-maven-plugin</artifactId>
+		<version>2.6</version>
+		<configuration>
+			<formats>
+				<format>html</format>
+				<format>xml</format>
+			</formats>
+		</configuration>
+	</plugin>
+ 
+   </plugins>
+</reporting>
   
 </project>
